# Stablecoin.fun

./: .env.local  .vercelignore  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.....s/: start-backend.sh  start-frontend.sh
.....s/smart_contracts/: Cargo.toml  deploy.sh
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
components/: mint-redeem-modal.tsx  navbar.tsx  providers.tsx  site-headers.tsx  stablecoin-card.tsx  trasaction-history.tsx
components/providers/: anchor-provider.tsx  wallet-provider.tsx
components/stablecoin/: burn-dialog.tsx  create-button.tsx  create-dialog.tsx  mint-dialog.tsx  stablecoin-list.tsx  stablecoin-row.tsx
config/: site.ts
fixed/: Cargo.toml
fixed/src/: error.rs  lib.rs  processor.rs  state.rs
hooks/: use-anchor-program.ts  use-program.ts
lib/: api.ts  constants.ts  idl.ts  types.ts  utils.ts
smart_contract/: Cargo.toml  my-keypair.json
smart_contract/src/: lib.rs
src/: App.tsx  index.css  lib.rs  main.tsx  polyfills.ts  vite-env.d.ts
src/components/: CreateStablecoin.tsx  Features.tsx  Header.tsx  (+1 more)
stable-fun/: Cargo.toml
stable-fun/src/: lib.rs
stable-fun/src/instructions/: burn.rs  create_coin.rs  mint.rs  mod.rs
stable-fun/src/state/: mod.rs  stablecoin.rs  user_data.rs
stablecoin-factory/: Anchor.toml  Cargo.toml  package-lock.json
stablecoin_smart_contract/: Cargo.toml  cargo  smart_contract-keypair.json
stablecoin_smart_contract/src/: lib
stablecoin_smart_contract/tests/: lib.rs
(+34 files in other folders)
