[package]
name = "fixed"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.9.13"
thiserror = "1.0.30"
bytemuck = "1.7.0"
stablebond-sdk = "2.0.21"

[dev-dependencies]
solana-program-test = "1.9.13"


[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = false
