[package]
name = "stable-fun"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
solana-program = "1.18.26"
solana-client = "1.10.0"
solana-sdk = "1.18.26"
borsh = "0.9.3"
borsh-derive = "0.9.3"
thiserror = "1.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
test-bpf = []
