[package]
name = "stable-fun"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.26"
solana-sdk = "1.18.26"
borsh = "0.10.3"
solana-program-test = "1.18.26"

[dev-dependencies]
solana-program-test = "1.18.26"
tokio = { version = "1", features = ["full"] }


[lib]
crate-type = ["cdylib"]  
